Oauth demo worked

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": [
+    "src/**/*"
+  ],
 }
