--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@zk-email/ts-sdk": "../zk-email-wallet/packages/ts-sdk",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "reverse-mirage": "^1.1.0",
     "typescript": "^5.5.3",
     "viem": "^2.17.2",
     "wagmi": "^2.10.9",
