--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/react-dom": "^18.3.0",
     "@zk-email/oauth-sdk": "^0.1.3",
     "dotenv": "^16.4.5",
+    "file-loader": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "reverse-mirage": "^1.1.0",
+    "svg-inline-loader": "^0.8.0",
     "typescript": "^5.5.3",
     "viem": "^2.17.2",
     "wagmi": "^2.10.9",
